--- a/checkpoint 1/index.html
+++ b/checkpoint 1/index.html
@@ -37,6 +37,12 @@
                         <a class="nav-link" href="#">Produtos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="cadastro_produto.html">Cadastro Produto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="busca_produto.html">Buscar Produto</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Contato</a>
                     </li>
                 </ul>
