ultima modificacao em aula

--- a/checkpoint 1/busca_produto.html
+++ b/checkpoint 1/busca_produto.html
@@ -14,18 +14,69 @@
 </head>
 
 <body>
-    <!-- Formulário de Cadastro -->
-    <script src="script_cad_produto.js"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <div class="container mt-4">
-        <h2>Buscar Produto</h2>
-
-        <form id="cadastro_produto-form" action="busca_produto.php" method="POST" onsubmit="return validarCadastro()">
-
-            <div class="form-group">
-                <input type="text" name="buscar" placeholder="Digite o nome ou código do produto">
-                <input type="submit" class="btn btn-primary" value="Buscar">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Loja de Eletrônicos</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Página Principal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cadastro_cliente.html">Cadastro</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="lista_produtos.php">Produtos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cadastro_produto.html">Cadastro Produto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="busca_produto.html">Buscar Produto</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-shopping-cart"></i> Carrinho
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-bell"></i> Notificações
+                        </a>
+                    </li>
+                </ul>
             </div>
-        </form>
-    </div>
+        </nav>
+        <!-- Scripts JavaScript do Bootstrap -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        
+        <!-- Formulário de Cadastro -->
+        <script src="script_cad_produto.js"></script>
+        <div class="container mt-4">
+            <h2>Buscar Produto</h2>
+
+            <form id="cadastro_produto-form" action="busca_produto.php" method="POST"
+                onsubmit="return validarCadastro()">
+
+                <div class="form-group">
+                    <input type="text" name="buscar" placeholder="Digite o nome ou código do produto">
+                    <input type="submit" class="btn btn-primary" value="Buscar">
+                </div>
+            </form>
+        </div>
 </body>
+
 </html>
