--- a/checkpoint 1/index.html
+++ b/checkpoint 1/index.html
@@ -64,7 +64,7 @@
             <h2>Login</h2>
             <form id="login-form" action="login.php" method="post">
                 <div class="form-group">
-                    <label for="username">Nome de Usuário:</label>
+                    <label for="username">Email:</label>
                     <input type="text" class="form-control" id="username" placeholder="Digite o nome de usuário"
                         name="username">
                 </div>
